--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,15 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="" class="img-responsive">
+    <img
+      [src]="recipe.imagePath"
+      alt="{{recipe.name}}"
+      class="img-responsive"
+      style="max-height: 300px;">
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>Recipe Name</h1>
+    <h1>{{recipe.name}}</h1>
   </div>
 </div>
 <div class="row">
@@ -16,7 +20,7 @@
         class="btn btn-primary dropdown-toggle">
         Manage Recipe <span class="caret"></span></button>
       <ul class="dropdown-menu">
-        <li><a href="#">Add ingredientes to Shopping list</a></li>
+        <li><a href="#">Add ingredients to Shopping list</a></li>
         <li><a href="#">Edit recipe</a></li>
         <li><a href="#">Delete recipe</a></li>
       </ul>
@@ -25,11 +29,14 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Description
+    <p>{{recipe.description}}</p>
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
     Ingredients
+<!--    <ul>-->
+<!--      <li *ngFor="let ingredient of recipe.ingredients">{{ingredient.name}} ({{ingredient.amount}})</li>-->
+<!--    </ul>-->
   </div>
 </div>
