--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,7 @@
 <a
   href="#"
-  class="list-group-item clearfix">
+  class="list-group-item clearfix"
+  (click)="onRecipeSelect()">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{recipe.name}}</h4>
     <p class="list-group-item-text">{{recipe.description}}</p>
@@ -12,5 +13,5 @@
           class="img-responsive"
           style="max-height: 50px;">
       </span>
-</a>em works!
+</a>
 
