--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -35,9 +35,8 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
-<!--    <ul>-->
-<!--      <li *ngFor="let ingredient of recipe.ingredients">{{ingredient.name}} ({{ingredient.amount}})</li>-->
-<!--    </ul>-->
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">{{ingredient.name}} - {{ingredient.amount}} </li>
+    </ul>
   </div>
 </div>
