--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -22,7 +22,7 @@
         Manage Recipe <span class="caret"></span></button>
       <ul class="dropdown-menu">
         <li><a (click)="onAddToShoppingList()" style="cursor: pointer;">Add ingredients to Shopping list</a></li>
-        <li><a style="cursor: pointer;">Edit recipe</a></li>
+        <li><a (click)="onEditRecipe()" style="cursor: pointer;">Edit recipe</a></li>
         <li><a style="cursor: pointer;">Delete recipe</a></li>
       </ul>
     </div>
