replaces events for observables

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="nav navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Josemy Recipe Nook</a>
+      <a routerLink="/" class="navbar-brand">Josemy Recipe Nook</a>
     </div>
 
     <div class="navbar-default">
