--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,15 +1,26 @@
+<h2>Register</h2>
 <div class="row">
   <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
     <form (ngSubmit)="onSignUp(form)" #form="ngForm">
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="text" id="email" name="email" ngModel="" class="form-control">
+        <input
+          type="email"
+          id="email"
+          name="email"
+          class="form-control"
+          ngModel>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="text" id="password" name="password" ngModel="" class="form-control">
+        <input
+          type="password"
+          id="password"
+          name="password"
+          class="form-control"
+          ngModel>
       </div>
-      <button class="btn btn-primary" type="submit">Sign Up</button>
+      <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Sign Up</button>
     </form>
   </div>
 </div>
