--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,6 +11,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
+          <a routerLink="/signin">Login</a>
           <a routerLink="/signup">Register</a>
         </li>
         <li class="dropdown" appDropdown>
